# IoT_project

./: README_EXTENSION.md  advanced_flight_controller.py  altitude_fsm.py  comandi di spostamento  crazyflie_model_pose_plugin.cpp  crazyflie_model_pose_plugin.hpp  dashboard_app.py  data_analyzer.py  drone_simulation_components.py  gazebo_world_setup.py  iot_system.py  iot_system_px4.py  mavlink_interface.py  model.config  model.sdf  mqtt_ros2_bridge.py  readme.txt  ros2_gazebo_hover.py  ros2_gazebo_integration.py  setup_ros2_gazebo.py  test_integration.py
crazyflie_rotor_plugin/: CMakeLists.txt  package.xml
crazyflie_rotor_plugin/include/: crazyflie_rotor_plugin.hpp
crazyflie_rotor_plugin/src/: crazyflie_led_plugin.cpp  crazyflie_rotor_plugin.cpp
